--- a/client/package.json
+++ b/client/package.json
@@ -12,15 +12,29 @@
 		"clean": "rimraf node_modules build yarn-error.log .eslintcache"
 	},
 	"dependencies": {
+		"@radix-ui/react-dialog": "^1.0.5",
+		"@radix-ui/react-label": "^2.0.2",
+		"@radix-ui/react-select": "^2.0.0",
+		"@radix-ui/react-slot": "^1.0.2",
+		"@tanstack/react-query": "^5.17.19",
+		"@tanstack/react-query-devtools": "^5.17.19",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.0",
+		"dayjs": "^1.11.10",
+		"lodash": "^4.17.21",
 		"lucide-react": "^0.312.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-hot-toast": "^2.4.1",
+		"react-recoil-form": "^0.7.6",
+		"react-router-dom": "^6.21.3",
+		"recoil": "^0.7.7",
 		"tailwind-merge": "^2.2.0",
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
+		"@tanstack/eslint-plugin-query": "^5.17.7",
+		"@types/lodash": "^4.14.202",
 		"@types/node": "^20.11.5",
 		"@types/react": "^18.2.43",
 		"@types/react-dom": "^18.2.17",
