--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "start": "yarn serve",
     "start-dev": "yarn && nodemon -w src/ -e d.ts,ts,js --exec ts-node --files src/index.ts",
     "serve": "node dist/index.js",
-    "update-prisma": "npx prisma db pull --force && npx prisma generate"
+    "update-prisma": "npx prisma db pull --force && npx prisma generate",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^5.8.1",
@@ -18,7 +19,8 @@
     "express": "^4.18.2",
     "lodash": "^4.17.21",
     "mongodb": "^6.3.0",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "prisma": "^5.8.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -30,7 +32,6 @@
     "lint-staged": "^15.2.0",
     "nodemon": "^3.0.3",
     "prettier": "^3.2.4",
-    "prisma": "^5.8.1",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "tslint": "^6.1.3",
